--- a/MidtermNew2/.project
+++ b/MidtermNew2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MidtermNew</name>
+	<name>MidtermNew2</name>
 	<comment></comment>
 	<projects>
 	</projects>
